--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -1,3 +1,10 @@
+
+.unstyled-list  {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .directory {
   padding: 25px;
   text-rendering: optimizeLegibility;
@@ -17,11 +24,6 @@
   .flex-direction(row);
   .flex-wrap(wrap);
   .justify-content(space-between);
-
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
 }
 
 .directory__flow {
@@ -117,4 +119,105 @@
 
 .directory__flow-meta--downloads {
   margin-right: 0;
+}
+
+
+.directory__search-form {
+  .flex-display;
+  .flex-direction(row);
+  .justify-content(space-between);
+
+  margin-bottom: 35px;
+}
+
+.directory__search-input {
+  border: 1px solid #DEDEDE;
+  padding: 13px 26px;
+  width: 100%;
+
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.directory__search-button {
+  border: 1px solid #DEDEDE;
+  border-left: none;
+  padding: 0 25px;
+
+  background: #F6F6F6;
+  color: #B8B8B8;
+  text-transform: uppercase;
+  font-weight: bold;
+
+  &:hover {
+
+  }
+
+  i {
+    display: none;
+  }
+}
+
+.directory__collections {
+  .flex-display;
+  .flex-direction(row);
+  .flex-wrap(wrap);
+  .justify-content(space-between);
+
+  margin-bottom: 35px;
+}
+
+.directory__collection {
+}
+
+.directory__collection {
+  .flex-display;
+  .flex-direction(column);
+  .align-items(center);
+  /* .justify-content(center) */;
+
+  display: block;
+  padding: 25px;
+  width: 32%;
+  height: 250px;
+  border-radius: 2px;
+
+  background: #F0F1F2;
+  color: #FFF;
+  text-align: center;
+
+  &:hover {
+    color: #FEFEFE;
+    text-decoration: none;
+  }
+
+  @media @mobile, @tablet {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+}
+
+.directory__collection-name {
+  margin: 0;
+  font-size: 32px;
+}
+
+.directory__collection--home {
+  background: #1C2431;
+}
+
+.directory__collection--robots {
+  background: #F1592A;
+
+  background: #f1592a; /* Old browsers */
+  background: -moz-linear-gradient(top,  #f1592a 0%, #C63A0A 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f1592a), color-stop(100%,#C63A0A)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #f1592a 0%,#C63A0A 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #f1592a 0%,#C63A0A 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #f1592a 0%,#C63A0A 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #f1592a 0%,#C63A0A 100%); /* W3C */
+}
+
+.directory__collection--work {
+  background: teal;
 }
