fix search layout ie

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -2,6 +2,7 @@
 @import 'lib/bootstrap-social.less';
 @import 'lib/animate.less';
 @import 'media-queries.less';
+@import 'device.less';
 @import 'animations.less';
 @import 'device.less';
 @import 'login.less';
