--- a/assets/less/templates.less
+++ b/assets/less/templates.less
@@ -41,6 +41,7 @@
   .flex-display;
   .flex-direction(row);
   .justify-content(center);
+  width: 100%;
 }
 .template-list-container {
   .flex-display;
