Slew of fixes for IE

--- a/assets/less/login.less
+++ b/assets/less/login.less
@@ -4,6 +4,12 @@
 @twitter-color:  #36A9DA;
 @github-color:   #444444;
 
+.login-container {
+  .flex-display;
+  .flex(1);
+  .justify-content(center);
+}
+
 .login-card {
   width: 450px;
 }
