--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -13,6 +13,7 @@
 @import 'flow-node-thumbnail-list.less';
 @import 'flex.less';
 @import 'type.less';
+@import 'material.less';
 @import 'omnibox.less';
 @import 'profile.less';
 @import 'resources.less';
