--- a/assets/less/resources.less
+++ b/assets/less/resources.less
@@ -1,5 +1,12 @@
+.resource-container {
+  .flex-display;
+  .flex(1);
+  .align-content(center);
+
+}
+
 .resource__list {
-  overflow-y: scroll;
+  .flex(1);
 }
 
 .resource {
