--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -1,5 +1,5 @@
-html, body, .full-height {
-  height: 100%;
+body {
+  .flex-display;
 }
 
 .selected-item {
@@ -12,32 +12,6 @@ html, body, .full-height {
   }
 }
 
-.materialize {
-  overflow: hidden;
-  .page-heading {
-    font-size: 1.5em;
-  }
-
-  .flow-image-but-really-the-flow {
-    background-color: lightgrey;
-    transition: 1s all;
-    .flow-editor {
-      min-height:100vh;
-      flex-shrink: 0;
-      -webkit-flex-shrink: 0;
-    }
-    &.importing {
-      background-color: #fff;
-    }
-
-    button.importing {
-      -webkit-animation: 1s bounceOutRight ease;
-      -ms-animation: 1s bounceOutRight ease;
-      animation: 1s bounceOutRight ease;
-    }
-  }
-}
-
 .page-header {
   h1 {
     margin-top: 70px;
@@ -46,7 +20,6 @@ html, body, .full-height {
 .alert-info h4 {
   color: rgba(0, 0, 0, 0.6);
 }
-
 
 .flow-importing {
   .bill-of-materials {
