moved some flex stuff out of browse, added search for template names

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -23,6 +23,7 @@
 @import 'styles.less';
 @import 'flow-directory.less';
 @import 'templates.less';
+@import 'browse.less';
 
 
 @import (less) '../../public/lib/fontawesome/css/font-awesome.css';
