flexify connect page

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -3,6 +3,7 @@
 @import 'lib/animate.less';
 @import 'media-queries.less';
 @import 'device.less';
+@import 'connected-nodes.less';
 @import 'animations.less';
 @import 'device.less';
 @import 'login.less';
