--- a/assets/less/connected-nodes.less
+++ b/assets/less/connected-nodes.less
@@ -1,11 +1,11 @@
 .connected-nodes {
   .flex-display;
   .flex(1);
-  .justify-content(space-around);
+  .justify-content(flex-start);
+  .align-content(flex-start);
   .flex-wrap(wrap);
 
   .connected-node {
-    .flex-grow(1);
     .flex-display;
     .align-items(center);
     .flex-direction(column);
@@ -18,8 +18,8 @@
   }
 
   .connected-node-thumbnail {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     padding: 20px;
   }
 }
