--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -4,6 +4,7 @@
 @import 'media-queries.less';
 @import 'device.less';
 @import 'connected-nodes.less';
+@import 'add-node.less';
 @import 'animations.less';
 @import 'device.less';
 @import 'login.less';
