--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -16,6 +16,7 @@
 @import 'flex.less';
 @import 'type.less';
 @import 'material.less';
+@import 'analyze.less';
 @import 'omnibox.less';
 @import 'profile.less';
 @import 'resources.less';
