styles make templates not look dumb now

--- a/assets/less/templates.less
+++ b/assets/less/templates.less
@@ -28,11 +28,8 @@
 
 .templates {
   .flex(1);
+  .flex-display;
   .flex-direction(column);
-
-  width: 100%;
-  min-height: 100%;
-  margin: 0;
 }
 
 .search-container{
@@ -123,7 +120,6 @@
   .flex-display;
   .flex-direction(row);
   .justify-content(center);
-
   z-index: 3;
   background-repeat: repeat;
 }
