Center nodes on connected nodes

--- a/assets/less/connected-nodes.less
+++ b/assets/less/connected-nodes.less
@@ -1,7 +1,7 @@
 .connected-nodes {
   .flex-display;
   .flex(1);
-  .justify-content(flex-start);
+  .justify-content(center);
   .align-content(flex-start);
   .flex-wrap(wrap);
 
