--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -3,6 +3,7 @@
 @import 'lib/animate.less';
 @import 'media-queries.less';
 @import 'device.less';
+@import 'designer-sidebar.less';
 @import 'connected-nodes.less';
 @import 'add-node.less';
 @import 'animations.less';
@@ -25,7 +26,10 @@
 @import 'invitation.less';
 @import 'home.less';
 @import 'octos.less';
+@import 'sidebar.less';
 @import 'styles.less';
+@import 'toolbar.less';
+@import 'collection-browser.less';
 @import 'flow-directory.less';
 @import 'templates.less';
 
