--- a/assets/less/collection-browser.less
+++ b/assets/less/collection-browser.less
@@ -1,32 +1,25 @@
-.collection-browser__input-wrap {
+.collection-browser__filter-form {
+  .flex(1);
+
   position: relative;
-  border: #E5E5E5;
-  width: 100%;
   top: 5px;
 
-  background: oldlace;
-}
+  height: 32px;
 
-.collection-browser__form {
-  .flex(1);
+  background: #FFF;
 }
 
 .collection-browser__filter-icon {
   position: absolute;
   top: 8px;
   left: 5px;
-
 }
 
-.collection-browser__input {
-  position: absolute;
-  top: 0;
-  left: 25px;
-  border: none;
-  width: 100%;
-  padding: 5px 10px;
+.collection-browser__filter-input {
 
-  background: salmon;
+  border: 1px solid #E5E5E5;
+  padding: 5px 10px 5px 25px;
+
 
   &:focus {
     outline: none;
