fix gateblu icon

--- a/assets/less/nodes.less
+++ b/assets/less/nodes.less
@@ -28,7 +28,7 @@
 
 .spiral-thumbnail {
   .node-thumbnail;
-  background-image: url('/assets/images/300x300spiral.png');
+  background-image: url('https://ds78apnml6was.cloudfront.net/device/gateblu.svg');
 }
 
 .faded {
