--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -11,6 +11,7 @@
 @import 'nodes.less';
 @import 'flow.less';
 @import 'flow-tutorial.less';
+@import 'flow-blueprint.less';
 @import 'flow-nodes.less';
 @import 'flow-node-detail-list.less';
 @import 'flow-node-thumbnail-list.less';
