--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -89,7 +89,7 @@
   }
 }
 
-.flow-node-editor {
+/*.flow-node-editor {
   position: absolute;
   max-height: 450px;
   top: 70px;
@@ -121,7 +121,7 @@
   }
 }
 
-
+ */
 .flow-link {
   stroke: #7f7f7f;
   stroke-width: 4;
@@ -153,4 +153,3 @@
   cursor: grabbing;
   }
 }
-
