--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -14,6 +14,7 @@
 @import 'flow-tutorial.less';
 @import 'flow-nodes.less';
 @import 'flow-node-detail-list.less';
+@import 'flow-node-editor.less';
 @import 'flow-node-thumbnail-list.less';
 @import 'flex.less';
 @import 'type.less';
@@ -28,7 +29,6 @@
 @import 'octos.less';
 @import 'sidebar.less';
 @import 'styles.less';
-@import 'toolbar.less';
 @import 'collection-browser.less';
 @import 'flow-directory.less';
 @import 'templates.less';
