--- a/assets/less/collection-browser.less
+++ b/assets/less/collection-browser.less
@@ -1,27 +1,26 @@
 .collection-browser__filter-form {
   .flex(1);
+  .flex-display();
 
   position: relative;
-  top: 5px;
 
+  height: 48px;
+  padding: 7px 10px 7px 0;
+}
+
+.collection-browser__filter-input {
+  .flex(1);
+
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
   height: 32px;
+  padding: 0 10px 0 34px;
 
   background: #FFF;
 }
 
 .collection-browser__filter-icon {
   position: absolute;
-  top: 8px;
-  left: 5px;
-}
-
-.collection-browser__filter-input {
-
-  border: 1px solid #E5E5E5;
-  padding: 5px 10px 5px 25px;
-
-
-  &:focus {
-    outline: none;
-  }
+  top: 17px;
+  left: 10px;
 }
