--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -1,16 +1,91 @@
+@sidebar-border-color: #E5E5E5;
+
 .sidebar {
+  .flex();
+  .flex-display;
+  .flex-direction(column);
+
+  border-left: 1px solid @sidebar-border-color;
+  min-width: 400px;
+  width: 400px;
+
   background: #FFF;
 }
 
-.sidebar-toolbar {
-  background: #FAFAFA;
-  border-bottom: 1px solid #E5E5E5;
+.sidebar__pane-content {
+  .flex(1);
+  .flex-display();
+  .flex-direction(column);
+  .align-items(flex-end);
+
 }
 
-.sidebar-body {
+.sidebar__pane {
+  .flex(1);
+  .flex-display();
+  .flex-direction(row);
 
+  border-bottom: 1px solid @sidebar-border-color;
+
+  background: #FFF;
 }
 
-.sidebar-toolbar--footer {
+
+.sidebar__pane-body {
+  .flex(1);
+
+  width: 100%;
+  overflow-y: scroll;
+}
+
+.sidebar__toolbar {
+  width: 100%;
+  height: 48px;
+
+  /* background: #FAFAFA; */
+  color: #333;
+}
+
+.sidebar__toolbar--header {
   .flex-display;
+  .justify-content(center);
+
+  border-bottom: 1px solid @sidebar-border-color;
+}
+
+.sidebar__toolbar--footer {
+  .flex-direction(row);
+  .flex-display();
+
+  border-top: 1px solid @sidebar-border-color;
+}
+
+.sidebar__toolbar-button {
+  border: none;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  background: none;
+
+
+  &:hover {
+    color: #08c;
+  }
+
+  &:disabled {
+    color: #AAA;
+  }
+}
+
+.sidebar__toolbar-button--active {
+  color: #08c;
+  cursor: default;
+
+  &:hover {
+    color: #08c;
+  }
+}
+
+.sidebar__pane-form {
+  padding: 16px;
 }
