--- a/assets/less/flow-blueprint.less
+++ b/assets/less/flow-blueprint.less
@@ -39,6 +39,7 @@
       .flex-display;
       .flex-direction(column);
 
+      text-align: center;
       min-width: 56px;
 
       cursor: pointer;
