--- a/assets/less/templates.less
+++ b/assets/less/templates.less
@@ -5,6 +5,9 @@
     .flex-display;
     .flex-direction(column);
     .justify-content(flex-start);
+    .public {
+      background-color: green;
+    }
     padding: 0;
   }
 
