Hopefully fix snapping issue, #5

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -17,6 +17,7 @@
 @import 'flex.less';
 @import 'type.less';
 @import 'material.less';
+@import 'node-wizard.less';
 @import 'analyze.less';
 @import 'omnibox.less';
 @import 'profile.less';
