Add empty state

--- a/assets/less/templates.less
+++ b/assets/less/templates.less
@@ -1,3 +1,21 @@
+.templates-loading-indicator {
+  .flex-display;
+  .flex(1);
+  .justify-content(center);
+  .align-items(center);
+  font-size: 6em;
+}
+
+.templates-no-templates {
+  .flex-display;
+  .flex-direction(column);
+  .flex(1);
+  .justify-content(center);
+  .align-items(center);
+  font-size: 2em;
+  text-align: center;
+}
+
 .templates-container {
   padding: 16px;
   .flow-blueprint-list-item {
