beautifying template editor

--- a/assets/less/flow-blueprint.less
+++ b/assets/less/flow-blueprint.less
@@ -34,7 +34,7 @@
   .actions {
     .flex-display;
     .justify-content(flex-end);
-
+    .flex-wrap(wrap);
     .action {
       .flex-display;
       .flex-direction(column);
