--- a/assets/less/templates.less
+++ b/assets/less/templates.less
@@ -24,6 +24,17 @@
     }
   }
 }
+.flow-blueprint-editor {
+  .content {
+    .flex-display;
+    .flex-direction(row);
+    .align-items(flex-start);
+  }
+  .properties-editor {
+    .flex(1);
+    min-width: 15em;
+  }
+}
 
 .search-container{
   .flex-display;
