--- a/assets/less/templates.less
+++ b/assets/less/templates.less
@@ -1,3 +1,24 @@
+.templates-toolbar {
+  .align-items(center);
+
+  .search {
+    background-color: #2F6CA1;
+    padding: 5px 0;
+    margin-left: 1em;
+    .flex(1);
+
+    md-icon {
+      margin-left: 10px;
+    }
+
+    .md-input {
+      color: white;
+      border: none;
+      margin-left: 40px;
+    }
+  }
+}
+
 .templates-loading-indicator {
   .flex-display;
   .flex(1);
