update blueprint(template) when liked

--- a/assets/less/flow-blueprint.less
+++ b/assets/less/flow-blueprint.less
@@ -90,7 +90,7 @@
     padding-bottom: 16px;
   }
 
-  .likes {
+  .info {
     cursor: pointer;
     margin-right: 10px;
 
@@ -98,7 +98,7 @@
       cursor: default;
 
       i {
-        color: #C53A3A;
+        color: #A52929;
       }
     }
   }
