Add citrix font

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -1,5 +1,11 @@
+@font-face {
+  font-family: citrix-sans;
+  src: url(//s3.amazonaws.com/citrix-cdn/can.cdn/marketing/assets/fonts/citrix-sans/citrixsans-regular.woff);
+}
+
 body {
   .flex-display;
+  font-family: citrix-sans;
 }
 
 .selected-item {
