mass rename of templates -> bluprints

--- a/assets/less/bluprints.less
+++ b/assets/less/bluprints.less
@@ -1,4 +1,4 @@
-.templates-toolbar {
+.bluprints-toolbar {
   .align-items(center);
 
   .search {
@@ -19,7 +19,7 @@
   }
 }
 
-.templates-loading-indicator {
+.bluprint-loading-indicator {
   .flex-display;
   .flex(1);
   .justify-content(center);
@@ -27,7 +27,7 @@
   font-size: 6em;
 }
 
-.templates-no-templates {
+.bluprints-no-bluprints {
   .flex-display;
   .flex-direction(column);
   .flex(1);
@@ -37,9 +37,9 @@
   text-align: center;
 }
 
-.templates-container {
+.bluprints-container {
   padding: 16px;
-  .flow-blueprint-list-item {
+  .bluprint-list-item {
     cursor: pointer;
   }
   .flows {
@@ -57,12 +57,12 @@
   .flow {
     .md-whiteframe-z1;
     .flow-blueprint;
-    &.selected-flow {
+    &.selected-bluprint {
       .md-whiteframe-z2;
     }
   }
 }
-.flow-blueprint-editor {
+.bluprint-editor {
   .content {
     .flex-display;
     .flex-direction(row);
