--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -6,7 +6,7 @@
 
 .directory {
   text-rendering: optimizeLegibility;
-  .flows {
+  .bluprints {
     .flex-display;
     .flex-direction(row);
     .justify-content(flex-start);
