--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -29,7 +29,7 @@
 @import 'octos.less';
 @import 'styles.less';
 @import 'flow-directory.less';
-@import 'templates.less';
+@import 'bluprints.less';
 @import 'browse.less';
 
 
