--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -30,7 +30,7 @@
 @import 'flow-directory.less';
 @import 'templates.less';
 @import 'browse.less';
-
+@import 'auth-footer.less';
 
 @import (less) '../../public/lib/fontawesome/css/font-awesome.css';
 @import (less) '../../public/lib/nvd3/nv.d3.css';
