--- a/assets/less/login.less
+++ b/assets/less/login.less
@@ -38,6 +38,12 @@
   margin: 0 auto 40px;
 }
 
+.login-octoblu-logo-small {
+  width : 100px;
+  height: 100px;
+  margin: 0 auto 10px;
+}
+
 .md-button {
   &.login-button {
     color: #F0F0F0;
