Updates to login page design

--- a/assets/less/login.less
+++ b/assets/less/login.less
@@ -33,9 +33,9 @@
 }
 
 .login-octoblu-logo {
-  width : 275px;
-  height: auto;
-  margin: 0 auto 40px;
+  width : 250px;
+  height: 52px;
+  margin: 0 auto 25px;
 }
 
 .md-button {
@@ -102,6 +102,6 @@
   }
 
   &.login-button-signup {
-    margin: 16px;
+    margin: 9px 8px 0;
   }
 }
