Update to flexbox and ui for login

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -7,7 +7,6 @@
 @import 'add-node.less';
 @import 'animations.less';
 @import 'device.less';
-@import 'login.less';
 @import 'nodes.less';
 @import 'flow.less';
 @import 'flow-tutorial.less';
@@ -31,6 +30,8 @@
 @import 'flow-directory.less';
 @import 'bluprints.less';
 @import 'browse.less';
+/* @import 'login.less'; */
+@import 'auth.less';
 @import 'auth-footer.less';
 
 @import (less) '../../public/lib/fontawesome/css/font-awesome.css';
