--- a/assets/less/bluprints.less
+++ b/assets/less/bluprints.less
@@ -104,6 +104,23 @@
     .flex(1);
   }
 }
+
+.directory__search-tags {
+  display: inline-block;
+  margin: 0px 10px;
+  padding: 10px 20px;
+  background: #F0F0F0;
+  color: #444;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 15px;
+}
+
+.directory__search-remove-tag {
+  padding-left: 10px;
+
+}
+
 .current-template-info {
   .flex-display;
   .flex(1);
