--- a/assets/less/auth.less
+++ b/assets/less/auth.less
@@ -9,25 +9,12 @@
 @github-button-color:   #444444;
 @signup-button-color:   transparent;
 
-.centered {
-  width: 100%;
-  height: 100%;
-  display: table;
-}
-
-.centered-wrapper {
-  @media @tablet, @all-desktops {
-    display: table-cell;
-    vertical-align: middle;
-  }
-}
-
 .auth {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
+  .flex-display;
+  .flex-direction(column);
+  .align-items(center);
+
+  width:100%;
 
   background: @background-color;
 
@@ -38,29 +25,55 @@
           transition: all .8s ease-in-out;
 }
 
-.auth__inner {
-  margin-top: 25px;
-  display: block;
-  width: 100%;
-
-  @media @tablet, @all-desktops {
-    .centered;
-    margin-top: 0;
-  }
-}
 
 .auth__card {
-  width: 100%;
-  margin: 0 auto;
-  padding: @card-padding @card-padding/2;
+  .flex-grow(1);
+  .flex-shrink(0);
+  .flex-display;
+  .align-items(center);
 
+  width: 100%;
+  padding: @card-padding @card-padding/2;
   @media @tablet, @all-desktops {
     max-width: 440px;
   }
 }
 
+.auth__card-inner {
+  width: 100%;
+}
+
+.auth__form {
+  margin-bottom: 16px;
+  padding: 16px;
+
+  background: #FFF;
+  border: 1px solid #E9E9E9;
+  border-radius: 2px;
+
+  &-header {
+    margin: 10px 0 16px;
+
+    font-weight: normal;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
+
+.auth__form-row {
+  .flex-display;
+}
+
+.auth__form-checkbox {
+  margin: 0;
+}
+
 .auth__button(@background) {
   &.md-button {
+    .flex(1);
+
+    width: 100%;
+
     border-radius: 3px;
     margin: 0 @card-padding/2 @card-padding;
     padding: 10px 6px;
@@ -107,7 +120,8 @@
   .auth__button(@google-button-color);
 }
 
-.auth__button--signup {
+.auth__button--signup,
+.auth__button--secondary {
   .auth__button(@signup-button-color);
 
   &.md-button {
@@ -134,12 +148,7 @@
 }
 
 .auth__footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-
   padding: 15px 0;
-  width: 100%;
 
   color: #444;
   text-align: center;
