--- a/assets/less/auth.less
+++ b/assets/less/auth.less
@@ -1,13 +1,15 @@
-@card-padding: 16px;
+@card-padding      : 16px;
+@card-border-radius: 3px;
 
-@text-color:            #F0F0F0;
-@background-color:      #F4F5F9;
-@email-button-color:    #009688;
-@google-button-color:   #DE4D36;
-@facebook-button-color: #3C5F96;
-@twitter-button-color:  #36A9DA;
-@github-button-color:   #444444;
-@signup-button-color:   transparent;
+@text-color            : #F0F0F0;
+@background-color      : #F4F5F9;
+@email-button-color    : #009688;
+@google-button-color   : #DE4D36;
+@facebook-button-color : #3C5F96;
+@twitter-button-color  : #36A9DA;
+@github-button-color   : #444444;
+@primary-button-color  : #14568f;
+@secondary-button-color: transparent;
 
 .auth {
   .flex-display;
@@ -25,7 +27,6 @@
           transition: all .8s ease-in-out;
 }
 
-
 .auth__card {
   .flex-grow(1);
   .flex-shrink(0);
@@ -34,6 +35,7 @@
 
   width: 100%;
   padding: @card-padding @card-padding/2;
+
   @media @tablet, @all-desktops {
     max-width: 440px;
   }
@@ -44,12 +46,12 @@
 }
 
 .auth__form {
-  margin-bottom: 16px;
-  padding: 16px;
+  border: 1px solid #E9E9E9;
+  border-radius: @card-border-radius;
+  margin-bottom: @card-padding;
+  padding: @card-padding;
 
   background: #FFF;
-  border: 1px solid #E9E9E9;
-  border-radius: 2px;
 
   &-header {
     margin: 10px 0 16px;
@@ -65,18 +67,17 @@
 }
 
 .auth__form-checkbox {
-  margin: 0;
+  margin: 0 0 15px;
 }
 
 .auth__button(@background) {
   &.md-button {
     .flex(1);
 
-    width: 100%;
-
-    border-radius: 3px;
+    border-radius: @card-border-radius;
     margin: 0 @card-padding/2 @card-padding;
     padding: 10px 6px;
+    width: 100%;
 
     color: @text-color;
     font-size: 1.2em;
@@ -96,6 +97,31 @@
 
     .fa {
       margin-right: 2px;
+    }
+  }
+
+  &.full__bleed {
+    margin: 0;
+  }
+}
+
+.auth__button {
+  .auth__button(@primary-button-color);
+}
+
+.auth__button--secondary {
+  .auth__button(@secondary-button-color);
+
+  &.md-button {
+    color: #14568F;
+    font-size: 14px;
+    text-transform: uppercase;
+
+    &:hover,
+    &:not([disabled]):hover,
+    &:not([disabled]):focus {
+      color: #14568F;
+      background: rgba(158,158,158,0.2);
     }
   }
 }
@@ -118,26 +144,6 @@
 
 .auth__button--google {
   .auth__button(@google-button-color);
-}
-
-.auth__button--signup,
-.auth__button--secondary {
-  .auth__button(@signup-button-color);
-
-  &.md-button {
-    margin-bottom: 0;
-
-    color: #14568F;
-    font-size: 14px !important;
-    text-transform: uppercase;
-
-    &:hover,
-    &:not([disabled]):hover,
-    &:not([disabled]):focus {
-      color: #14568F;
-      background: rgba(158,158,158,0.2);
-    }
-  }
 }
 
 .auth__octoblu-logo {
