--- a/assets/less/auth.less
+++ b/assets/less/auth.less
@@ -75,6 +75,7 @@
     .flex(1);
 
     border-radius: @card-border-radius;
+    display: block;
     margin: 0 @card-padding/2 @card-padding;
     padding: 10px 6px;
     width: 100%;
@@ -151,6 +152,13 @@
   width : 250px;
   height: 52px;
   margin: 0 auto 25px;
+}
+
+.auth__link {
+  display: block;
+  
+  color: @primary-button-color;
+  text-align: right;
 }
 
 .auth__footer {
