less subtle, also it happens when stopped

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -25,27 +25,27 @@
 
 @-webkit-keyframes notDeployedPulse {
   0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+    -webkit-box-shadow: 0 0 0 0 rgba(177, 198, 161, 0.5);
   }
   50% {
-      -webkit-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+      -webkit-box-shadow: 0 0 0 10px rgba(177, 198, 161, 0);
   }
   100% {
-      -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+      -webkit-box-shadow: 0 0 0 0 rgba(177, 198, 161, 0);
   }
 }
 @keyframes notDeployedPulse {
   0% {
-    -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
-    box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+    -moz-box-shadow: 0 0 0 0 rgba(177, 198, 161, 0.5);
+    box-shadow: 0 0 0 0 rgba(177, 198, 161, 0.4);
   }
   50% {
-      -moz-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
-      box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+      -moz-box-shadow: 0 0 0 10px rgba(177, 198, 161, 0);
+      box-shadow: 0 0 0 10px rgba(177, 198, 161, 0);
   }
   100% {
-      -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
-      box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+      -moz-box-shadow: 0 0 0 0 rgba(177, 198, 161, 0);
+      box-shadow: 0 0 0 0 rgba(177, 198, 161, 0);
   }
 }
 
@@ -145,7 +145,7 @@ md-sidenav.md-sidenav-left {
       animation-iteration-count: infinite;
     }
 
-    &.btn-playing.needs-to-be-deployed {
+    &.start-button.needs-to-be-deployed {
       -webkit-animation-name: notDeployedPulse;
       -webkit-animation-duration: 2s;
       -webkit-animation-iteration-count: infinite;
@@ -155,7 +155,7 @@ md-sidenav.md-sidenav-left {
       box-shadow: 0 0 0 rgba(204,169,44, 0.4);
     }
 
-    &.btn-playing.needs-to-be-deployed:hover {
+    &.start-button.needs-to-be-deployed:hover {
       animation: none;
     }
 
