Started fine tuning the node wizard views

--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -1,3 +1,66 @@
+.node-wizard {
+  .flex-display;
+  .flex-direction(column);
+  .align-items(center);
+  .align-self(center);
+
+  width: 100%;
+  max-width: 750px;
+  margin-top: 40px;
+  padding: 25px;
+  margin: 50px auto;
+}
+
+.node-wizard__header {
+  margin: 0 0 35px;
+  font-size: 32px;
+}
+
+.node-wizard__logo {
+  display: block;
+  margin-bottom: 35px;
+  width: 50%;
+  height: auto;
+}
+
+.node-wizard__body {
+  .flex-display;
+  .flex-direction(column);
+  .align-items(center);
+
+  width: 100%;
+}
+
+.node-wizard__copy {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.node-wizard__button {
+  padding: 10px 25px;
+}
+
+.node-wizard__dialog {
+
+}
+
+.node-wizard__dialog-body {
+  padding: 22px 16px 10px;
+  font-size: 18px;
+}
+
+
+.node-wizard__dialog-actions {
+  padding: 0 16px 16px !important;
+}
+
+
+
+
+
+
+
+
 .node-wizard-logo-container {
   .flex-display;
 
