Issue #36 - UX changes so that now unclaimed devices are not auto-selected.

--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -11,7 +11,7 @@
   margin: 50px auto;
 }
 
-.node-wizard__header {
+.node-wizard__title {
   margin: 0 0 35px;
   font-size: 32px;
 }
@@ -31,9 +31,26 @@
   width: 100%;
 }
 
+.node-wizard__form-row {
+  .flex-display;
+  .flex-direction(column);
+  padding-bottom: 26px;
+}
+
 .node-wizard__copy {
   font-size: 18px;
   margin-bottom: 20px;
+}
+
+.node-wizard__form {
+  .flex-display;
+  .flex-direction(column);
+
+  min-width: 400px;
+}
+
+.node-wizard__form-actions{
+  margin: 0 0 20px;
 }
 
 .node-wizard__button {
