Add logo to Octoblu TOS and clean up styles

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -37,6 +37,7 @@
 @import 'home.less';
 @import 'octos.less';
 @import 'styles.less';
+@import 'terms.less';
 @import 'flow-directory.less';
 @import 'bluprints.less';
 @import 'browse.less';
