clean up node collection UI

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -28,6 +28,7 @@
 @import 'home.less';
 @import 'octos.less';
 @import 'sidebar.less';
+@import 'node-collection.less';
 @import 'styles.less';
 @import 'collection-browser.less';
 @import 'flow-directory.less';
