--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -1,4 +1,6 @@
 @sidebar-border-color: #E5E5E5;
+@sidebar-toolbar-height: 30px;
+@sidebar-button-color: rgba(0,0,0,0.54);
 
 .sidebar {
   .flex();
@@ -25,7 +27,7 @@
   .flex-display();
   .flex-direction(row);
 
-  border-bottom: 1px solid @sidebar-border-color;
+  /* border-bottom: 1px solid @sidebar-border-color; */
 
   background: #FFF;
 }
@@ -39,9 +41,7 @@
 
 .sidebar__toolbar {
   width: 100%;
-  height: 48px;
-
-  /* background: #FAFAFA; */
+  height: @sidebar-toolbar-height;
   color: #333;
 }
 
@@ -49,7 +49,6 @@
   .flex-display;
   .justify-content(center);
 
-  height: 30px;
   border-bottom: 1px solid @sidebar-border-color;
 }
 
@@ -62,11 +61,10 @@
 
 .sidebar__toolbar-button {
   border: none;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 0 10px;
 
-  color: rgba(0,0,0,0.54);
-  line-height: 30px;
+  color: @sidebar-button-color;
+  line-height: @sidebar-toolbar-height;
   text-decoration: none;
   text-transform: uppercase;
 
@@ -104,4 +102,76 @@
 
 .sidebar__pane-form {
   padding: 16px;
+}
+
+
+
+.collection-browser__filter-form {
+  .flex(1);
+  .flex-display();
+
+  position: relative;
+
+  height: 48px;
+  padding: 7px 10px 7px 0;
+}
+
+.collection-browser__filter-input {
+  .flex(1);
+
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
+  height: 32px;
+  padding: 0 10px 0 34px;
+
+  background: #FFF;
+}
+
+.collection-browser__filter-icon {
+  position: absolute;
+  top: 17px;
+  left: 10px;
+}
+
+
+
+
+
+.sidebar__filter-form {
+  .flex(1);
+  .flex-display();
+
+  position: relative;
+
+  padding: 0 0 0 12px;
+  margin: 0;
+  height: @sidebar-toolbar-height;
+  border-left: 1px solid @sidebar-border-color;
+
+  /* background: oldlace; */
+}
+
+.sidebar__filter-input {
+  .flex(1);
+
+  padding: 0 0 0 17px;
+
+  border: none;
+  height: @sidebar-toolbar-height;
+  line-height: @sidebar-toolbar-height;
+
+  /* background: blanchedalmond; */
+}
+
+.sidebar__filter-icon {
+  position: absolute;
+  top: -1px;
+  left: 9px;
+
+
+  &.fa {
+    color: @sidebar-button-color;
+    font-size: 14px;
+    line-height: @sidebar-toolbar-height;
+  }
 }
