Layout updates to design to accomodate sidebar

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -13,7 +13,6 @@
 
 @import 'media-queries.less';
 @import 'device.less';
-@import 'designer-sidebar.less';
 @import 'connected-nodes.less';
 @import 'add-node.less';
 @import 'animations.less';
@@ -47,3 +46,4 @@
 @import 'browse.less';
 @import 'auth.less';
 @import 'error.less';
+@import 'designer.less';
