--- a/assets/less/designer/flow-top-bar.less
+++ b/assets/less/designer/flow-top-bar.less
@@ -23,8 +23,7 @@
     }
   }
 
-  .input-group-addon,
-  .input-group-btn {
+  .input-group-addon {
     border: none;
     border-bottom-right-radius: 2px;
     border-top-right-radius: 2px;
@@ -47,6 +46,20 @@
 
 .flow-top-bar-tool--flow-search {
   .flex(1);
+
+  .input-group-addon {
+    padding: 0;
+  }
+}
+
+.flow-search--button {
+  border: none;
+  border-bottom-right-radius: 2px;
+  border-top-right-radius: 2px;
+
+  height: 34px;
+  padding: 6px 12px;
+  background: transparent;
 }
 
 .flow-top-bar-tool--controls {
